<resources>
    <string name="app_name">POO!P</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="phone">Telefono</string>

    <string name="loading">Cargando ...</string>
    <string name="error_conection">No es posible conectarse a internet, favor revise su conexión</string>
    <string name="error_phone">Telefono invalido</string>
    <string name="logout">Cerrar Sesión</string>

    <string name="expert">Experto</string>
    <string name="hard">Difícil</string>
    <string name="medium">Medio</string>
    <string name="easy">Facíl</string>

    <string name="expertLevel">Nivel Experto</string>
    <string name="hardLevel">Nivel Difícil</string>
    <string name="mediumLevel">Nivel Medio</string>
    <string name="easyLevel">Nivel Facíl</string>

    <string name="fail">Incorrecto !</string>
    <string name="failText">Has fallado este nivel</string>
    <string name="time">Perdiste !</string>
    <string name="timeText">Se ha acabado el tiempo</string>
    <string name="levelup">Ganaste !</string>
    <string name="levelUpText">Has pasado este nivel</string>
    <string name="correct">Correcto !</string>
    <string name="correctText">Has acertado esta pregunta</string>
    <string name="tryAgain">Intentar de nuevo</string>
    <string name="main">Menu principal</string>
    <string name="continued">Continuar</string>

    <string name="format_date">dd/mm/yyyy</string>
    <string name="format_hour">hh:mm</string>

    <string name="save">Guardar</string>
    <string name="description">Descripción</string>

    <string name="corte1">Corte 1 </string>
    <string name="corte2">Corte 2 </string>
    <string name="corte3">Corte 3 </string>
    <string name="subject">Materia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="play">JUEGA Y APRENDE</string>
    <string name="notes">CALIFICACIONES</string>
    <string name="calendar">AGENDA</string>
    <string name="search">CONSULTAR</string>
    <string name="profile">PERFIL</string>
    <string name="recoveryPassword">Olvide mi contraseña</string>

    <string name="off">Cerrar Sesión</string>
    <string name="code">Código</string>

</resources>
