<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/grayLight"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/game_question" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/grayMid"
        android:inputType="text|textEmailAddress"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/email_state"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="@dimen/horizontal_margin_edit"
        android:layout_marginRight="@dimen/horizontal_margin_edit"
        android:maxLines="1"
        android:background="@drawable/field_text"
        android:textColor="@color/grayDark"/>

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textColorHint="@color/grayMid"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/pass_state"
        android:paddingLeft="10dp"
        android:drawablePadding="10sp"
        android:maxLines="1"
        android:layout_marginLeft="@dimen/horizontal_margin_edit"
        android:layout_marginRight="@dimen/horizontal_margin_edit"
        android:background="@drawable/field_text"
        android:textColor="@color/grayDark"/>

    <Button
        android:id="@+id/btn_password"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:onClick="btnPassword"
        android:text="@string/recoveryPassword"
        android:textAllCaps="false"
        android:textColor="@color/colorAccentDark"
        android:textSize="17sp" />

    <Button
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_purple"
        android:text="@string/login"
        android:textAllCaps="false"
        android:onClick="btnLogin"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <Button
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_accent"
        android:text="@string/register"
        android:textAllCaps="false"
        android:onClick="btnRegister"
        android:textColor="@android:color/white"
        android:textSize="17sp" />


</LinearLayout>

