<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/grayLight"
    tools:context=".activities.RecoveryPasswordActivity">


    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/grayMid"
        android:inputType="text|textEmailAddress"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/email_state"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="@dimen/horizontal_margin_edit"
        android:layout_marginRight="@dimen/horizontal_margin_edit"
        android:maxLines="1"
        android:background="@drawable/field_text"
        android:textColor="@color/grayDark"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textColorHint="@color/grayMid"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/pass_state"
        android:paddingLeft="10dp"
        android:drawablePadding="10sp"
        android:maxLines="1"
        android:layout_marginLeft="@dimen/horizontal_margin_edit"
        android:layout_marginRight="@dimen/horizontal_margin_edit"
        android:background="@drawable/field_text"
        android:textColor="@color/grayDark"/>

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/code"
        android:textColorHint="@color/grayMid"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/phone_state"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="@dimen/horizontal_margin_edit"
        android:layout_marginRight="@dimen/horizontal_margin_edit"
        android:maxLines="1"
        android:background="@drawable/field_text"
        android:textColor="@color/grayDark"/>

    <Button
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_accent"
        android:text="Aceptar"
        android:textAllCaps="false"
        android:onClick="sendCode"
        android:textColor="@android:color/white"
        android:textSize="17sp" />


</LinearLayout>

