<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DateFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/grayLight"
        tools:context=".activities.LoginActivity">

        <TextView
            android:textSize="18dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:background="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:gravity="center"
            android:text="Agenda"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin_edit"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/horizontal_margin_edit"
            android:background="@drawable/field_text"
            android:drawableLeft="@drawable/ic_lapiz"
            android:drawablePadding="10sp"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="@color/grayDark"
            android:textColorHint="@color/grayMid" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                style="@style/CounterOverFlow"
                android:textSize="18sp"
                android:paddingHorizontal="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hora"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                style="@style/CounterOverFlow"
                android:textSize="18sp"
                android:paddingHorizontal="15dp"/>

            <TextView
                android:id="@+id/txtv_reserver_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_date"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                style="@style/TextReadOnly"
                android:textSize="18sp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/txtv_reserver_hour"
                style="@style/TextReadOnly"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingHorizontal="15dp"
                android:text="@string/format_hour"
                android:textSize="18sp" />

        </GridLayout>

        <Button
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/btn_accent"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


</FrameLayout>

